# CallSkill

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
.claude/skills/call/: SKILL.md
.github/workflows/: ci.yml
adapters/: __init__.py  mcp_server.py
call_core/: __init__.py  audio.py  errors.py  recorder.py  stt.py  tts.py
memory/: MEMORY.md  feedback_scratch_dir.md  implementation_progress.md
